More sitsim in VTW chapter

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -10,7 +10,7 @@
 
 \label{chapter-vtw}
 
-This chapter presents the development of a parallel reality platform that combines a tablet computer, GPS, accelerometer and magnetometer, with an OpenSim based virtual environment to allow exploration of the real world ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime. Cultural heritage sites such as this cathedral are introduced as an ideal area for which parallel reality systems can be applied to beneficial effect and three use cases for parallel reality platforms in cultural heritage scenarios are described along a scale of the available positional accuracy. The
+This chapter presents the development of a parallel reality platform that combines a tablet computer, GPS, accelerometer and magnetometer, with an OpenSim based virtual environment to allow exploration of the real world ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime. Cultural heritage sites such as this cathedral are introduced as an ideal area for which parallel reality systems can be applied to beneficial effect and three use cases for parallel reality platforms in cultural heritage scenarios are described along a scale of increasing positional accuracy.
 
 %=========================================================================================================
 
@@ -70,7 +70,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 %=========================================================================================================
 
-VR is not only useful for virtual heritage where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also allows for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE~\cite{cabral:x3dexperience,Christou2006} that completely blocks stimuli from the user's real world surroundings allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
+VR is not only useful for virtual heritage where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also allows for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE~\cite{cabral:x3dexperience,Christou2006} that completely blocks stimuli from the user's real world surroundings allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
 Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to the amateur observers in museums and visitor centres, performance is often more important than historical accuracy.
 
@@ -84,13 +84,13 @@ One application of alternate reality techniques to the field of cultural heritag
 	\textit{``When using a situated simulation there is then approximate identity between the user’s visual perspective and perception of the real physical environment, and the user’s perspective in(to) the virtual environment as this is audiovisually presented by means of the phone and sitsim’s interface. The relative congruity between the `real' and the `virtual' is obtained by allowing the camera’s position, movement and orientation in the 3D environment, to be constrained by the orientation- and location technology of the smartphone: As the user moves the phone in real space the perspective inside the virtual space changes accordingly.''}~\cite{Liestøl2011}
 \end{quote}
 
-These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon very accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world. Their approach is that of forgoing a live camera feed of the real environment in place of previously captured panoramic photographs from known positions. This allows for zero registration error between virtual objects and these photographs, instead moving the registration error to the edges of the device's screen where the photographs meet the real environment they were captured from. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in the same manner that parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
+These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon very accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world. The indirect augmented reality approach is that of forgoing a live camera feed of the real environment in place of previously captured panoramic photographs. As the exact position that the photographs were captured at is known, this allows for zero registration error between virtual objects and the photographs, instead moving the registration error to the edges of the device's screen where the photographs meet the real environment they were captured from. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in a similar manner as to how parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
 
 \begin{quote}
-	\textit{`Moving registration error to the edge of the screen is better in part because it is a more difficult place to detect error due to both the bezel around the screen, and the altered field-of-view parameters of the on-screen image. In many ways, people are also already trained to believe that when they see a view of the real world on the screen of the mobile device it lines up with the world behind it. This is largely due to the proliferation of digital cameras already using the screen as a viewfinder.''}~\cite{Wither2011}
+	\textit{``Moving registration error to the edge of the screen is better in part because it is a more difficult place to detect error due to both the bezel around the screen, and the altered field-of-view parameters of the on-screen image. In many ways, people are also already trained to believe that when they see a view of the real world on the screen of the mobile device it lines up with the world behind it. This is largely due to the proliferation of digital cameras already using the screen as a viewfinder.''}~\cite{Wither2011}
 \end{quote}
 
-However likening the Unity based virtual environments of sitsim systems to the panoramic photographs of indirect augmented reality does not sit well with the alternate reality definitions adopted by this thesis and undervalues the novelty of sitsim as a concept. Fundamentally, the indirect augmented reality platforms presented by Wither et al. still present the user, via the screen of the device, with a view of the real environment upon which virtual objects are placed, even though that real view is no longer `live' but is instead a previously captured photograph. The sitsim platforms presented by Liest\o l et al. however present via the screen of the device a view of a complete virtual environment rather than a mediated image of the real environment (whether live or not) onto which individual virtual objects are placed.
+However likening the Unity based virtual environments of sitsim systems to the panoramic photographs of indirect augmented reality does not fit well with the alternate reality definitions adopted by this thesis (see tables \ref{adopted-alternate-reality-definitions} and \ref{additional-alternate-reality-definitions}) and undervalues the novelty of sitsim as a concept. Fundamentally, the indirect augmented reality platforms presented by Wither et al. still present the user, via the screen of the device, with a view of the real environment upon which virtual objects are placed, even though that view of the real environment is no longer `live' but is instead a photograph captured at a previous point in time. The sitsim platforms presented by Liest\o l et al., however, present via the screen of the device a view of a complete virtual environment rather than a mediated image of the real environment onto which individual virtual objects are placed.
 
 Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, both complete unto themselves, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liest\o l et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} taken from~\cite{Liestøl2011} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}).
 
@@ -101,7 +101,7 @@ Whilst one could argue that the experience of using a sitsim platform is similar
   \label{sitsim-1.png}
 \end{figure}
 
-In recognising this distinction, a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to be directly related to the concept of spatial equivalence discussed in section \ref{spatial-equivalence}. Thus rather than considering existing sitsim systems to be members of the class of alternate reality systems known as indirect augmented reality, this thesis believes that membership of the class of spatially equivalent parallel reality is a better representation of their implementation and experience. This also avoids the somewhat confusing visualisation from Liest\o l et al. in~\cite{Liestøl2011} of sitsim as occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality while also being outwith the region of mixed reality.
+In recognising this distinction, a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to be directly related to the concept of spatial equivalence discussed in section \ref{spatial-equivalence}. Thus rather than considering existing sitsim systems to be members of the class of alternate reality systems known as indirect augmented reality, this thesis believes that membership of the class of spatially equivalent parallel reality is a better representation of their implementation and experience. This also avoids the somewhat confusing visualisation from Liest\o l et al. in~\cite{Liestøl2011} of sitsim as occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst also being outwith the region of mixed reality.
 
 %sitsim-2.png
 
@@ -147,28 +147,28 @@ In addition to these temporary workshops, the reconstructions have also been use
 
 \label{parallel-reality-in-virtual-heritage}
 
-Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both). The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
+Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both), with occasional exceptions such as sitsim. The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
 
-Applying the concept of parallel reality to virtual heritage represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
+Applying the concept of parallel reality to virtual heritage via a sitsim style interface represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, while allowing investigation into the parallel reality concept in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
 
 %=========================================================================================================
 
-Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available represents a restriction upon the style of interaction possible with a parallel reality system. Considering an increasing level of accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured;
+Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available represents a restriction upon the style of interaction possible with a parallel reality system, as recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png};
 
 \begin{enumerate}
 	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario, users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any two of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
 	
 	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site is possible. In this scenario, users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts may not be possible due to inaccuracy in the positioning solution.
 	
-	\item Freeform exploration with detailed comparison ability - Where extremely accurate positioning is available, a style of interaction that allows the user to not only compare aspects of the real and virtual environments from the equivalent vantage point but also to perform close in-depth comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can lean in to more closely inspect any particular artefact.
+	\item Freeform exploration with detailed comparison ability - Where extremely accurate positioning is available, a style of interaction that allows the user to not only explore and compare aspects of the real and virtual environments from the equivalent vantage point but also to perform close in-depth comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can lean in to more closely inspect any particular artefact and perhaps even interact with and effect the virtual artefacts.
 \end{enumerate}
 
 %=========================================================================================================
 
 \section{The Virtual Time Window}
-The Virtual Time Window (VTW) is an application of parallel reality to virtual heritage, leveraging the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions.
+The Virtual Time Window (VTW) is an application of parallel reality to virtual heritage, that leverages the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform that would allow investigation into parallel reality in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach would also allow for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc.
 
-VTW manifests as a tablet computer which is capable of tracking its position via GPS, its compass heading via magnetometer (`electronic compass') and its pitch via accelerometer. Existing augmented reality applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
+VTW manifests as a tablet computer which is capable of tracking its position via GPS, its compass heading via magnetometer (`electronic compass') and its pitch via accelerometer. Existing augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
 
 The tablet employed by VTW runs a modified version of the Second Life client that accesses, via wifi, a virtual reconstruction of a cultural heritage site hosted by an OpenSim server. The Second Life client is controlled entirely by the tablet's position and orientation - the user does not manually control any aspect. The modality of interaction offered is similar to that of using a smartphone to take a photograph, but whereas the screen of the smartphone shows the real environment as it is, the screen of the VTW tablet shows the environment as it was in the past - a window to the past, or \textit{Virtual Time Window}. The user is free to explore the real cultural heritage site, observing it in its current state, whilst at any moment `looking through' VTW to see what a particular vantage looked like in the past. Figure \ref{vtw_high_level.png} provides a high level representation of the components of the platform at a conceptual level.
 
@@ -880,7 +880,7 @@ The Hausdorff distance between the planned route and that recorded by the MAX-6 
 
 The MAX-6 achieved better performance than the smartphone, which recorded a Hausdorff distance of $1.33e^{-04\circ}$ ($\pm14.8$m N/S, $\pm8.2$m E/W). The Hausdorff distance between the routes logged by the MAX-6 and the smartphone was $1.14e^{-04\circ}$ ($\pm12.7$m N/S, $\pm7.0$m E/W) which represents a low correlation between the inaccuracies recorded by the two receivers even though they are of similar magnitudes from the planned route.
 
-The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg}) and providing an effective obstruction to line-of-sight to half of the sky (and thus substantially impairing reception of signals from GPS satellites) when in proximity to it. When considering just the sub-route shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W) throughout this sub-route, with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausforff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
+The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg}) and providing an effective obstruction to line-of-sight to half of the sky (and thus substantially impairing reception of signals from GPS satellites) when in proximity to it (an issue also encountered in some sitsim experiments~\cite{Liestøl2014}). When considering just the sub-route shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W) throughout this sub-route, with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausforff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
  
 \begin{figure}[h]
 \centering
@@ -922,6 +922,25 @@ Considering the second scenario of freeform exploration, this level of positiona
 Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several feet on either side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few feet in the manner that scenario 3 envisages would be unworkable with the positional accuracy of VTW.
 
 The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit greatly from better graphical quality and higher responsiveness to changes in user orientation.
+
+%=========================================================================================================
+
+\subsection{Real World Experience of VTW}
+
+Revisiting the definition of parallel reality, one can consider to to be comprised of two fundamental aspects;
+
+\begin{enumerate}
+	\item the environmental aspect - are there two complete environments, one real and the other virtual?
+	\item the experiential aspect - can the user freely switch between the environments?
+\end{enumerate}
+
+Although the VTW platform was developed as a preliminary instantiation of the parallel reality concept and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of the system is not an ideal realisation of experiential aspect of the definition. Instead of switching between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when the user focusses their attention at the virtual environment upon the device's screen, they are also perceiving the real environment around it, even if only in the periphery of their vision and attention.
+
+The experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not on the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With augmented reality, even indirect augmented reality, and with the sitsim projects and VTW, the user's view is always a mix, never purely virtual. Can never reach the virtual extreme of the combined Milgram/Waterworth model.
+
+
+
+
 
 %=========================================================================================================
 
