More sitsim in VTW chapter

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -166,6 +166,7 @@ Although parallel reality as a concept is less critical of accurate registration
 %=========================================================================================================
 
 \section{The Virtual Time Window}
+\label{the-virtual-time-window}
 The Virtual Time Window (VTW) is an application of parallel reality to virtual heritage, that leverages the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform that would allow investigation into parallel reality in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach would also allow for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc.
 
 VTW manifests as a tablet computer which is capable of tracking its position via GPS, its compass heading via magnetometer (`electronic compass') and its pitch via accelerometer. Existing augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
@@ -927,25 +928,19 @@ The accuracy of orientation tracking does not change with different positional a
 
 \subsection{Real World Experience of VTW}
 
-Revisiting the definition of parallel reality, one can consider to to be comprised of two fundamental aspects;
+Revisiting the definition of parallel reality, one can consider it to be distinguished by two principal features;
 
 \begin{enumerate}
 	\item the environmental aspect - are there two complete environments, one real and the other virtual?
 	\item the experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed as a preliminary instantiation of the parallel reality concept and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of the system is not an ideal realisation of experiential aspect of the definition. Instead of switching between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when the user focusses their attention at the virtual environment upon the device's screen, they are also perceiving the real environment around it, even if only in the periphery of their vision and attention.
-
-The experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not on the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With augmented reality, even indirect augmented reality, and with the sitsim projects and VTW, the user's view is always a mix, never purely virtual. Can never reach the virtual extreme of the combined Milgram/Waterworth model.
-
-
-
-
+Although the VTW platform was developed as a preliminary implementation of the parallel reality concept and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of using the system falls short of the ideal realisation of the experiential aspect of the definition. Instead of switching between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, you are also perceiving the real environment around it filling the majority of the viewport. This experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With augmented reality, even indirect augmented reality, and with the sitsim projects and VTW, the user's view is always a mix, never purely virtual and the position upon the locus of attention axis can never reach its virtual reality extreme. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms clarifies how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
 %=========================================================================================================
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was an initial foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions hosted upon an OpenSim framework. Real world experimentation revealed that the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a freeform exploration scenario wherein a certain distance is maintainted between the user and the objects being observed. 
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was an initial foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a freeform exploration scenario wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality.
 
 %=========================================================================================================
